# pastegrin

./: README.md  docker-compose.yml
backend/: backend.sln
backend/auth/: Cargo.toml  Dockerfile
backend/auth/migrations/2024-02-24-121725_users/: up.sql
backend/auth/src/: auth.rs  db.rs  helpers.rs  main.rs  middleware.rs  models.rs  schema.rs  users.rs
backend/backend/: Program.cs  appsettings.json  backend.csproj
backend/backend/Controllers/: PasteController.cs
backend/backend/Data/: ApiContext.cs
backend/backend/Migrations/: 20240223124216_pastes.Designer.cs  20240223124216_pastes.cs  ApiContextModelSnapshot.cs
backend/backend/Models/: Paste.cs
backend/backend/Properties/: launchSettings.json
backend/gateway/: Dockerfile  README.md  bun.lockb  index.ts  package.json  pnpm-lock.yaml  proxy.ts
backend/pastes/: package.json  pnpm-lock.yaml
backend/pastes/src/controllers/: app.controller.ts  pastes.controller.ts
backend/pastes/src/dto/: create-paste.dto.ts  paste.dto.ts  update-paste.dto.ts  verify-paste-dto.ts
backend/pastes/src/model/: paste.entity.ts
backend/pastes/src/modules/: app.module.ts  pastes.module.ts
frontend/: bun.lockb  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: Navbar.tsx  PastesList.tsx  SinglePaste.tsx
frontend/src/roots/: createPaste.tsx  paste.tsx  root.tsx  signin.tsx  viewPaste.tsx
frontend/src/routes/: myPastes.tsx  publicPastes.tsx  root.tsx  settings.tsx  signin.tsx  signup.tsx  userPastes.tsx  viewPaste.tsx
frontend/src/types/: Paste.ts
(+14 files in other folders)
