[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
bcrypt = "0.15.0"
jwt-simple = "0.12.9"
